# advent_of_code_framework

./: .gitignore  README.md
advent_of_code/: CMakeLists.txt  main.cpp
advent_of_code/advent/: advent1.h  advent10.h  advent11.h  advent12.h  advent13.h  advent14.h  advent15.h  advent16.h  advent17.h  advent18.h  advent19.h  advent2.h  advent20.h  advent21.h  advent22.h  advent23.h  advent24.h  advent25.h  advent3.h  advent4.h  advent5.h  advent6.h  advent7.h  advent8.h  advent9.h  advent_assert.h  advent_headers.h  advent_logger.h  advent_of_code.h  advent_setup.h  advent_solutions.h  advent_test_inputs.h  advent_testcase_setup.h  advent_types.h  advent_utils.h
advent_of_code/advent1/: advent1.cpp  advent1.h
advent_of_code/advent10/: advent10.cpp  advent10.h
advent_of_code/advent11/: advent11.cpp  advent11.h
advent_of_code/advent12/: advent12.cpp  advent12.h
advent_of_code/advent13/: advent13.cpp  advent13.h
advent_of_code/advent14/: advent14.cpp  advent14.h
advent_of_code/advent15/: advent15.cpp  advent15.h
advent_of_code/advent16/: advent16.cpp  advent16.h
advent_of_code/advent17/: advent17.cpp  advent17.h
advent_of_code/advent18/: advent18.cpp  advent18.h
advent_of_code/advent19/: advent19.cpp  advent19.h
advent_of_code/advent2/: advent2.cpp  advent2.h
advent_of_code/advent20/: advent20.cpp  advent20.h
advent_of_code/advent21/: advent21.cpp  advent21.h
advent_of_code/advent22/: advent22.cpp  advent22.h
advent_of_code/advent23/: advent23.cpp  advent23.h
advent_of_code/advent24/: advent24.cpp  advent24.h
advent_of_code/advent25/: advent25.cpp  advent25.h
advent_of_code/advent3/: advent3.cpp  advent3.h
advent_of_code/advent4/: advent4.cpp  advent4.h
advent_of_code/advent5/: advent5.cpp  advent5.h
advent_of_code/advent6/: advent6.cpp  advent6.h
advent_of_code/advent7/: advent7.cpp  advent7.h
advent_of_code/advent8/: advent8.cpp  advent8.h
advent_of_code/advent9/: advent9.cpp  advent9.h
advent_of_code/src/: advent1.cpp  advent10.cpp  advent11.cpp  advent12.cpp  advent13.cpp  advent14.cpp  advent15.cpp  advent16.cpp  advent17.cpp  advent18.cpp  advent19.cpp  advent2.cpp  advent20.cpp  advent21.cpp  advent22.cpp  advent23.cpp  advent24.cpp  advent25.cpp  advent3.cpp  advent4.cpp  advent5.cpp  advent6.cpp  advent7.cpp  advent8.cpp  advent9.cpp  advent_of_code_testcases.cpp  isqrt.cpp  md5.cpp  parse_utils.cpp
advent_of_code/templates/: advent_setup.h.in  advent_solutions.h.in  advent_template.cpp.in  advent_template.h.in  advent_test_inputs.h.in
advent_of_code/utils/: Coords.h  a_star.h  advent_utils.h  aoc_utils.natvis  binary_find.h  bit_ops.h  brackets.h  combine_maps.h  comparisons.h  conway_simulation.h  coords3d.h  coords_iterators.h  enums.h  erase_remove_if.h  grid.h  has_duplicates.h  index_iterator.h  index_iterator2.h  int_range.h  is_sorted.h  isqrt.cpp  isqrt.h  istream_block_iterator.h  istream_line_iterator.h  md5.cpp  md5.h  min_transform.h  modular_int.h  parse_utils.cpp  parse_utils.h  position3d.h  push_back_unique.h  range_contains.h  ring_buffer.h  shared_lock_guard.h  small_vector.h  sorted_vector.h  span.h  sparse_array.h  split_string.h  (+5 more)
